--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -28,6 +28,10 @@
 
         <menu>
 
+            <item android:id="@+id/nav_login"
+                android:icon="@drawable/baseline_login_24"
+                android:title="LogIn"/>
+
             <item android:id="@+id/nav_logout"
                 android:icon="@drawable/baseline_logout_24"
                 android:title="Logout"/>
