--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -207,7 +207,7 @@
                 android:id="@+id/AcceptSingUpButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign in"/>
+                android:text="Sign up"/>
 
         </RelativeLayout>
 
